align footer menu, fixes #113

--- a/assets/sass/partials/_main.scss
+++ b/assets/sass/partials/_main.scss
@@ -2495,16 +2495,6 @@ table {
     border:none;
     color: $c_sidebarH3;
   }
-  + div {
-    padding: {
-      left: 10px;
-    }
-  }
-  + div#calendar_wrap{ 
-    padding: {
-      left: 0;
-    }
-  }
 }
 
 /**
